Fixing main layout bug when the page is bigger from 100vh

--- a/src/layouts/MainLayout/styles.scss
+++ b/src/layouts/MainLayout/styles.scss
@@ -1,6 +1,6 @@
 .mainLayout {
   background-color: $white-flight;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
